@@ -1,3 +1,10 @@
+2007-02-02  Ludwig Reiter  <ludwig.reiter@intevation.de>
+	
+	comment clean up.
+
+	* src/de/intevation/printlayout/tools/TextConsumer.java:
+		removed a unneeded comment.
+
 2007-02-07  Ludwig Reiter  <ludwig.reiter@intevation.de>
 
 	another small code clean up. 
